# Transr

./: .gitignore  Cargo.toml  DOC-FUNC.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  TREE.txt  build.sh
python/: rd.md
python/Unit/: Unit1.py  Unitesting.py  debuggingUnit.py
python/test/: MyFunc.py  MyPlugins.py  TestAll.py  test.py
src/: debug.rs  errhuman.rs  lib.rs  transr.rs  vvv.rs
src/func/: nowtime.rs  rmath.rs  rnet.rs  sysez.rs  timeru.rs
src/plugins/: decorator.rs  hyros.rs  rustnetx.rs
